--- a/WAD/CSS/css_timetable.html
+++ b/WAD/CSS/css_timetable.html
@@ -4,7 +4,7 @@
 <title>TIME TABLE
 </title>
 </head>
-<body> <img src="C:\Users\DELL\Downloads\svecw.jfif"   align = "left" width="100" height="100"></img>
+<body> <img src="../svecw.png"   align = "left" width="100" height="100"></img>
 <center><h3>SHRI VISHNU ENGINEERING COLLEGE FOR WOMEN :: BHIMAVARAM</h3></center>
       <center><h3>(Autonomus)</h3></center>
       <center><h3>DEPARTMENT OF ARTIFICIAL INTELLIGEMCE</h3></center>
