--- a/WAD/HTML/index.html
+++ b/WAD/HTML/index.html
@@ -12,7 +12,7 @@
         color: #ff6666;
       }
       #table tr:nth-child(even){background-color: #f2f2f2;}
-      #table tr:hover {background-color: #999999;}
+      #table tr:hover {background-color: silver;}
       #table td, #table th {
         border: 1px solid #ddd;
         padding: 8px;
